--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -111,3 +111,6 @@ PhysXTreeRebuildRate=10
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+[/Script/Engine.Engine]
+NearClipPlane=1.000000
+
